# haru

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
assets/lang/en/: feed.txt  messages.json  pat.txt  tips.txt
assets/lang/ja/: feed.txt  messages.json  pat.txt  tips.txt
assets/lang/zh/: feed.txt  messages.json  pat.txt  tips.txt
src/: cats.rs  cli.rs  lang.rs  main.rs  render.rs  sounds.rs  state.rs
tests/: cli.rs
